--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           name: Run Tests
           command: npm run jestTest
       - store_test_results:
-          path: src/test/test-results.xml
+          path: test-results
   build-back-end:
     docker:
       - image: kherring/oedb:latest
