--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 jobs:
-  test-and-build-front-end:
+  test-and-compile-front-end:
     docker:
       - image: circleci/node:16
     steps:
@@ -20,7 +20,7 @@ jobs:
           command: npm run jestTest
       - store_test_results:
           path: test-results/jest
-  build-back-end:
+  test-and-compile-back-end:
     docker:
       - image: kherring/oedb:latest
     steps:
@@ -38,5 +38,5 @@ jobs:
 workflows:
   build:
     jobs:
-      - build-front-end
-      - build-back-end
+      - test-and-compile-front-end
+      - test-and-compile-back-end
