add vsce build job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,17 @@ jobs:
           path: target/results.xml
       - store_test_results:
           path: target/results.xml
+  build:
+    docker:
+      - image: circleci/node:16
+    steps:
+     - checkout
+      - run: 
+        name: Vsix Package
+        command: vsce package
 workflows:
   build:
     jobs:
       - test-and-compile-front-end
       - test-and-compile-back-end
+      - build
