added read only mode

--- a/docker/openedge-project.json
+++ b/docker/openedge-project.json
@@ -24,6 +24,14 @@
             "connect": "-db notWorking -S 99999",
             "dumpFile": "",
             "aliases": []
+        },
+        {
+            "name": "mydb_RO",
+            "connect": "-db C:/WorkSpace/dbs/Sports/Sports -RO",
+            "dumpFile": "",
+            "aliases": [
+              "sports"
+            ]
         }
     ],
     "numThreads": 1,
