--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,4 +23,5 @@
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "ablunit.params": "-pf test.pf -clientlog ablunit.log -logginglevel 4"
 }
