--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "editor.formatOnSave": true,
-  "prettier.singleQuote": true,
-  "prettier.printWidth": 70,
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+    "editor.formatOnSave": true,
+    "prettier.singleQuote": true,
+    "jsxSingleQuote": true,
+    "tabWidth": 4,
+    "prettier.printWidth": 70,
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
