--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
     "editor.formatOnSave": true,
+    "editor.tabSize": 4,
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
