--- a/package.json
+++ b/package.json
@@ -329,6 +329,7 @@
         "jest": "^29.4.3",
         "mocha": "^9.2.2",
         "npm-run-all": "^4.1.5",
+        "resolve-ts-aliases": "^1.0.1",
         "style-loader": "^3.3.1",
         "ts-loader": "^9.3.0",
         "typescript": "^4.6.4",
