--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
         "curly": "warn",
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
-        "semi": "off"
+        "semi": "off",
+        "quotes": [1, "single", { "avoidEscape": true }]
     },
     "ignorePatterns": [
         "out",
