--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "editor.formatOnSave": true,
     "prettier.singleQuote": true,
+    "singleQuote": true,
     "jsxSingleQuote": true,
     "tabWidth": 4,
     "prettier.printWidth": 70,
