--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,13 @@
     "typescript.tsc.autoDetect": "off",
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
     "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
 }
