--- a/src/view/tsconfig.json
+++ b/src/view/tsconfig.json
@@ -5,14 +5,28 @@
         "target": "es6",
         "outDir": "out/view/app",
         "lib": ["es6", "dom"],
-        "jsx": "react",
+        "jsx": "react-jsx",
         "sourceMap": true,
-        "rootDir": "..",
+        "rootDir": "../",
         "noUnusedLocals": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "experimentalDecorators": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "baseUrl": ".",
+        "paths": {
+            "@assets/*": ["app/assets/*"],
+            "@Connection/*": ["app/Connection/*"],
+            "@Fields/*": ["app/Fields/*"],
+            "@Indexes/*": ["app/Indexes/*"],
+            "@Query/*": ["app/Query/*"],
+            "@utils/*": ["app/utils/*"],
+            "@Welcome/*": ["app/Welcome/*"],
+            "@app/*": ["app/*"],
+            "@view/*": ["./*"],
+            "@src/*": ["../*"],
+            "@root/*": ["../../*"]
+        }
     },
     "exclude": ["node_modules"]
 }
