--- a/package.json
+++ b/package.json
@@ -325,6 +325,7 @@
         "babel-jest": "^29.4.3",
         "css-loader": "^6.7.1",
         "eslint": "^8.14.0",
+        "eslint-plugin-react": "^7.33.2",
         "glob": "^8.0.1",
         "jest": "^29.4.3",
         "mocha": "^9.2.2",
