--- a/package.json
+++ b/package.json
@@ -307,7 +307,8 @@
         "watch:views": "webpack --watch --mode development",
         "test": "npm run compile && node ./node_modules/vscode/bin/test",
         "jestTest": "jest",
-        "vsce": "vsce package"
+        "vsce": "vsce package",
+        "lint": "eslint src/** --fix"
     },
     "devDependencies": {
         "@babel/core": "^7.21.0",
