Added the ability, to add tables to favorites.

--- a/package.json
+++ b/package.json
@@ -177,6 +177,12 @@
                     "name": "Tables",
                     "contextualTitle": "Tables",
                     "title": "Tables"
+                },
+                {
+                    "id": "pro-bro-favorites",
+                    "name": "Table favorites",
+                    "contextualTitle": "Table favorites",
+                    "title": "Table favorites"
                 }
             ]
         },
@@ -234,6 +240,25 @@
             {
                 "command": "pro-bro.dblClickQuery",
                 "title": "DblClickQuery"
+            },
+            {
+                "command": "pro-bro.dblClickFavoriteQuery",
+                "title": "DblClickFavoriteQuery"
+            },
+            {
+                "command": "pro-bro.addFavourite",
+                "title": "pro-bro: addFavourite",
+                "icon": "$(star-empty)"
+            },
+            {
+                "command": "pro-bro.queryFavorite",
+                "title": "pro-bro: Query Favorite",
+                "icon": "$(play)"
+            },
+            {
+                "command": "pro-bro.removeFavourite",
+                "title": "pro-bro: removeFavourite",
+                "icon": "$(star-full)"
             }
         ],
         "menus": {
@@ -288,6 +313,21 @@
                 {
                     "command": "pro-bro.query",
                     "when": "view == pro-bro-tables",
+                    "group": "inline"
+                },
+                {
+                    "command": "pro-bro.queryFavorite",
+                    "when": "view == pro-bro-favorites",
+                    "group": "inline"
+                },
+                {
+                    "command": "pro-bro.addFavourite",
+                    "when": "view == pro-bro-tables",
+                    "group": "inline"
+                },
+                {
+                    "command": "pro-bro.removeFavourite",
+                    "when": "view == pro-bro-favorites",
                     "group": "inline"
                 }
             ]
