--- a/docker/.env
+++ b/docker/.env
@@ -3,7 +3,7 @@ DB_NAME=sports2020
 DB_PORT=30000
 DB_MIN_PORT=28020 # Port range must not include ports defined in /etc/services/
 DB_MAX_PORT=28050
-IMAGE_NAME_126=gitlab.baltic-amadeus.lt:5005/progress/progress-docker/progress-build:12.6.0-centos
+IMAGE_NAME_128=gitlab.baltic-amadeus.lt:5005/progress/progress-docker/progress-build:12.8.1-ubuntu
 
 DB_NAME2=sports20201
 DB_PORT2=30001
@@ -11,4 +11,4 @@ DB_MIN_PORT2=28051 # Port range must not include ports defined in /etc/services/
 DB_MAX_PORT2=28080
 
 # Other Configuration Section
-PROGRESS_BASE_IMAGE=gitlab.baltic-amadeus.lt:5005/progress/progress-docker/progress-build:12.6.0-centos
+PROGRESS_BASE_IMAGE=gitlab.baltic-amadeus.lt:5005/progress/progress-docker/progress-build:12.8.1-ubuntu
