--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,10 @@
         "PowerShell": {
             "source": "PowerShell",
             "icon": "terminal-powershell",
-            "args": ["-ExecutionPolicy", "Bypass"]
+            "args": [
+                "-ExecutionPolicy",
+                "Bypass"
+            ]
         }
     },
     "terminal.integrated.defaultProfile.windows": "PowerShell",
@@ -26,5 +29,6 @@
     },
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    "workbench.colorCustomizations": {}
 }
