--- a/package.json
+++ b/package.json
@@ -370,6 +370,7 @@
         "@typescript-eslint/parser": "^5.21.0",
         "@vscode/test-electron": "^2.1.3",
         "babel-jest": "^29.4.3",
+        "copy-webpack-plugin": "^12.0.2",
         "css-loader": "^6.7.1",
         "eslint": "^8.14.0",
         "eslint-plugin-react": "^7.33.2",
