Fixed pro-bro setting boolean values

--- a/package.json
+++ b/package.json
@@ -79,17 +79,17 @@
                 },
                 "pro-bro.importConnections": {
                     "type": "boolean",
-                    "default": "true",
+                    "default": true,
                     "markdownDescription": "Import connections from openedge-project.json"
                 },
                 "pro-bro.useWriteTriggers": {
                     "type": "boolean",
-                    "default": "true",
+                    "default": true,
                     "markdownDescription": "Use write triggers"
                 },
                 "pro-bro.useDeleteTriggers": {
                     "type": "boolean",
-                    "default": "true",
+                    "default": true,
                     "markdownDescription": "Use delete triggers"
                 },
                 "pro-bro.tempfiles": {
@@ -98,7 +98,7 @@
                 },
                 "pro-bro.filterAsYouType": {
                     "type": "boolean",
-                    "default": "true",
+                    "default": true,
                     "markdownDescription": "Use filter as you type"
                 },
                 "pro-bro.logging.react": {
@@ -115,7 +115,7 @@
                 },
                 "pro-bro.development.useNewDbClient": {
                     "type": "boolean",
-                    "default": "false",
+                    "default": false,
                     "markdownDescription": "Use New DB Client implementation"
                 },
                 "pro-bro.gridTextSize": {
