--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,7 @@ jobs:
         steps:
             - checkout
             - run: tr ' ' '\n' \<<< "$PROGRESS_CFG_BASE64" | base64 --decode > /psc/dlc/progress.cfg
-            - run: export DLC=/psc/dlc
-            - run: ant compile
+            - run: DLC=/psc/dlc ant compile
             - run: ant test
             - persist_to_workspace:
                   root: .
