--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,14 @@ jobs:
     test-and-compile-back-end:
         docker:
             - image: kherring/oedb:latest
+
         steps:
             - checkout
             - run: tr ' ' '\n' \<<< "$PROGRESS_CFG_BASE64" | base64 --decode > /psc/dlc/progress.cfg
-            - run: DLC=/psc/dlc ant compile
+            - run:
+                  command: ant compile
+                  environment:
+                      DLC: /psc/dlc
             - run: ant test
             - persist_to_workspace:
                   root: .
