--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,9 @@ jobs:
         steps:
             - checkout
             - run: tr ' ' '\n' \<<< "$PROGRESS_CFG_BASE64" | base64 --decode > /psc/dlc/progress.cfg
-            - run: ant -Denv.DLC=/psc/dlc compile
+            - run: echo $DLC
+            - run: ls -l /psc/dlc/pct
+            - run: ant compile
             - run: ant test
             - persist_to_workspace:
                   root: .
