518 replaced deprecated ESLint rule

--- a/package.json
+++ b/package.json
@@ -360,6 +360,7 @@
         "@babel/core": "^7.21.0",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.21.0",
+        "@stylistic/eslint-plugin-js": "^2.11.0",
         "@types/glob": "^7.2.0",
         "@types/mocha": "^9.1.1",
         "@types/node": "14.x",
