--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,12 +14,13 @@
             "parser": "@typescript-eslint/parser",
             "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:@typescript-eslint/recommended", "plugin:react/jsx-runtime"],
             "plugins": [
+                "@stylistic/js",
                 "@typescript-eslint",
                 "react"
             ],
             "rules": {
                 "react/prop-types": "off",
-                "indent": ["off", 4] // deprecated, need to fix later: https://github.com/BalticAmadeus/ProBro/issues/518
+                "@stylistic/js/indent": ["warn", 4]
             }
         }
     ],
