--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
         "lib": ["ES2020", "dom"],
         "sourceMap": true,
         "rootDir": "src",
-        "strict": true /* enable all strict type-checking options */
+        "strict": true, /* enable all strict type-checking options */
+        "baseUrl": ".",
+        "paths": {
+            "@app/*": ["src/view/app/*"],
+            "@src/*": ["src/*"]
+        }
         /* Additional Checks */
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
         // "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
