--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "DB",
         "Explorer"
     ],
-    "version": "1.9.0-pre",
+    "version": "1.9.0",
     "repository": {
         "type": "git",
         "url": "https://github.com/BalticAmadeus/ProBro"
