544 partial implementation of RO mode

--- a/package.json
+++ b/package.json
@@ -127,6 +127,11 @@
                         "Small"
                     ],
                     "description": "Set the grid text size."
+                },
+                "pro-bro.readOnlyMode": {
+                    "type": "boolean",
+                    "default": false,
+                    "markdownDescription": "Connect to all databases in read-only mode"
                 }
             }
         },
