--- a/package.json
+++ b/package.json
@@ -428,6 +428,7 @@
         "faker": "^5.5.3",
         "fs": "^0.0.1-security",
         "html-webpack-plugin": "^5.5.3",
+        "jsonminify": "^0.4.2",
         "path": "^0.12.7",
         "raw-loader": "^4.0.2",
         "react": "^18.1.0",
