640: restoring the formatting of tsconfig

--- a/src/view/tsconfig.json
+++ b/src/view/tsconfig.json
@@ -5,10 +5,7 @@
         "moduleResolution": "node",
         "target": "es6",
         "outDir": "out/view/app",
-        "lib": [
-            "es6",
-            "dom"
-        ],
+        "lib": ["es6", "dom"],
         "jsx": "react-jsx",
         "sourceMap": true,
         "rootDir": "../",
@@ -19,42 +16,18 @@
         "resolveJsonModule": true,
         "baseUrl": ".",
         "paths": {
-            "@assets/*": [
-                "app/assets/*"
-            ],
-            "@Connection/*": [
-                "app/Connection/*"
-            ],
-            "@Fields/*": [
-                "app/Fields/*"
-            ],
-            "@Indexes/*": [
-                "app/Indexes/*"
-            ],
-            "@Query/*": [
-                "app/Query/*"
-            ],
-            "@utils/*": [
-                "app/utils/*"
-            ],
-            "@Welcome/*": [
-                "app/Welcome/*"
-            ],
-            "@app/*": [
-                "app/*"
-            ],
-            "@view/*": [
-                "./*"
-            ],
-            "@src/*": [
-                "../*"
-            ],
-            "@root/*": [
-                "../../*"
-            ]
+            "@assets/*": ["app/assets/*"],
+            "@Connection/*": ["app/Connection/*"],
+            "@Fields/*": ["app/Fields/*"],
+            "@Indexes/*": ["app/Indexes/*"],
+            "@Query/*": ["app/Query/*"],
+            "@utils/*": ["app/utils/*"],
+            "@Welcome/*": ["app/Welcome/*"],
+            "@app/*": ["app/*"],
+            "@view/*": ["./*"],
+            "@src/*": ["../*"],
+            "@root/*": ["../../*"]
         }
     },
-    "exclude": [
-        "node_modules"
-    ]
+    "exclude": ["node_modules"]
 }
