--- a/package.json
+++ b/package.json
@@ -421,6 +421,7 @@
         "@emotion/styled": "^11.10.0",
         "@mui/icons-material": "^5.10.2",
         "@mui/material": "^5.10.2",
+        "@types/jsonminify": "^0.4.3",
         "@types/uuid": "^9.0.1",
         "bootstrap": "^5.2.0",
         "esbuild": "^0.17.5",
